# PokemonShowdownWrapper

./: .gitignore  .gitmodules  CMakeLists.txt  premake5.lua
PlayerPort/: CMakeLists.txt
PlayerPort/include/: PShowdownParser.hpp  QuickReading.hpp
PlayerPort/src/: PShowdownParser.cpp  QuickReading.cpp  main.cpp
Server/: CMakeLists.txt  run_server
Server/include/: Communicator.hpp  ShowdownOutputSplitter.hpp
Server/src/: Communicator.cpp  ShowdownOutputSplitter.cpp  main.cpp
include/: Communicator.hpp
src/: Communicator.cpp  main.cpp
